near-sdk/compilation_tests/payable_view.stderr
error: Payable method must be mutable (not view)
  --> $DIR/payable_view.rs:13:16
   |
13 |     pub fn pay(&self) {}
   |                ^
